--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
@@ -919,6 +919,12 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：无需处理。
 
+## ERROR 4192 (42000) : ddl task executes too much time  
+
+* OceanBase 错误码：4192
+* 错误原因：DDL 任务执行时间过长。
+* 解决方式： 请关注该 DDL 操作的执行时间是否符合预期，若不符合预期，请联系技术支持人员协助排查。
+
 ## ERROR 4200 (HY000) : hash map/set entry exist
 
 * OceanBase 错误码：4200
@@ -2039,6 +2045,11 @@ ERROR4179 (HY000) : %s not allowed
 
 * 解决方式：无需处理。
 
+## ERROR 4387 (HY000) : Failed to switch resource group
+
+* OceanBase 错误码：4387
+* 兼容 MySQL 错误码：13937
+
 ## ERROR 4388 (HY000) : Unexpected internal ## ERROR happen, please checkout the internal errcode
 
 * OceanBase 错误码：4388
@@ -2069,6 +2080,12 @@ ERROR4179 (HY000) : %s not allowed
 
 * 错误原因：DDL SSTable 返回交叉。
 
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4392 (HY000) : disk is hung
+
+* OceanBase 错误码：4392
+* 错误原因：磁盘故障。
 * 解决方式：请联系技术支持人员协助排查。
 
 ## ERROR 4393 (HY000) : observer start process failure
