--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
@@ -648,3 +648,9 @@ ERROR 6322 (HY000) : ob clog slide timeout
 * 错误原因：内部错误。表示单次某个分区由日志系统提交回放引擎的已确认日志执行时间超过系统内预设值，停止处理本分区，开始下一个分区的任务处理。
 
 * 解决方式：内部错误码。请联系技术支持人员协助排查。
+
+## ERROR 6400(HY000) : tablet_freeze timeout
+
+* OceanBase 错误码：6400
+* 错误原因：分区级冻结。
+* 解决方式：请联系技术支持人员协助排查。
