--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/7.7000-7999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/7.7000-7999-of-mysql-mode.md
@@ -281,3 +281,443 @@ ERROR 7041 (HY000) : election priority mechanism changed, maybe during upgrading
 * 错误原因：选举优先级在跨版本升级的时候，遭遇了不同版本优先级的比较。
 
 * 解决方式：内部错误码。预期只在升级期间报告，请联系技术支持人员协助排查。
+
+## ERROR 7201 (HY000) : Binary geometry function given two geometries of different srids.Binary geometry function %s given two geometries of different srids: %u and %u, which should have been identical
+
+* OceanBase 错误码：7201
+* 兼容 MySQL 错误码：3033
+
+## ERROR 7202(HY000) : Calling geometry function with unsupported types of arguments.Calling geometry function %s with unsupported types of arguments
+
+* OceanBase 错误码：7202
+* 兼容 MySQL 错误码：3034
+
+## ERROR 7203(HY000) : Unknown GIS error occurred in function.Unknown GIS error occurred in function %s
+
+* OceanBase 错误码：7203
+* 兼容 MySQL 错误码：3035
+
+## ERROR 7204(HY000) : Unknown exception caught in GIS function.Unknown exception caught in GIS function %s
+
+* OceanBase 错误码：7204
+* 兼容 MySQL 错误码：3036
+
+## ERROR 7205(22023) : Invalid GIS data provided to function.Invalid GIS data provided to function %s
+
+* OceanBase 错误码：7205
+* 兼容 MySQL 错误码：3037
+
+## ERROR 7206(HY000) : The geometry has no data in function.The geometry has no data in function %s
+
+* OceanBase 错误码：7206
+* 兼容 MySQL 错误码：3038
+
+## ERROR 7207(HY000) : Unable to calculate centroid because geometry is empty in function.Unable to calculate centroid because geometry is empty in function %s
+
+* OceanBase 错误码：7207
+* 兼容 MySQL 错误码：3039
+
+## ERROR 7208(HY000) : Geometry overlay calculation error: geometry data is invalid in function.Geometry overlay calculation error: geometry data is invalid in function %s
+
+* OceanBase 错误码：7208
+* 兼容 MySQL 错误码：3040
+
+## ERROR 7209(HY000) : Geometry turn info calculation error: geometry data is invalid in function.Geometry turn info calculation error: geometry data is invalid in function %s
+
+* OceanBase 错误码：7209
+* 兼容 MySQL 错误码：3041
+
+## ERROR 7210(HY000) : Analysis procedures of intersection points interrupted unexpectedly in function.Analysis procedures of intersection points interrupted unexpectedly in function %s
+
+* OceanBase 错误码：7210
+* 兼容 MySQL 错误码：3042
+
+## ERROR 7211(HY000) : Unknown exception thrown in function.Unknown exception thrown in function %s
+
+* OceanBase 错误码：7211
+* 兼容 MySQL 错误码：3043
+
+## ERROR 7212(HY000) : Geometry byte string must be little endian
+
+* OceanBase 错误码：7212
+* 兼容 MySQL 错误码：3055
+
+## ERROR 7213(HY000) : Do not support online operation on table with GIS index
+
+* OceanBase 错误码：7213
+* 兼容 MySQL 错误码：3060
+
+## ERROR 7214(HY000) : Inconsistent intersection points.Inconsistent intersection points
+
+* OceanBase 错误码：7214
+* 兼容 MySQL 错误码：3122
+
+## ERROR 7215(HY000) : Parameter exceeds the maximum number of points in a geometryin function.Parameter %s exceeds the maximum number of points in a geometry (%lu) in function %s
+
+* OceanBase 错误码：7215
+* 兼容 MySQL 错误码：3134
+
+## ERROR 7216(22S01) : value is a geometry of unexpected type.%.64s value is a geometry of unexpected type %.64s in %.64s
+
+* OceanBase 错误码：7216
+* 兼容 MySQL 错误码：3516
+
+## ERROR 7217(SR002) : Can\'t parse the spatial reference system definition of SRID.Can\'t parse the spatial reference system definition of SRID %u
+
+* OceanBase 错误码：7217
+* 兼容 MySQL 错误码：3517
+
+## ERROR 7218(SR003) : The spatial reference system definition for SRID does not specify the mandatory (EPSG) projection parameter.The spatial reference system definition for SRID %u does not specify the mandatory %s (EPSG %u) projection parameter
+
+* OceanBase 错误码：7218
+* 兼容 MySQL 错误码：3518
+
+## ERROR 7219(01000) : There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
+
+* OceanBase 错误码：7219
+* 兼容 MySQL 错误码：3519
+
+## ERROR 7220(22S00) : Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian
+
+* OceanBase 错误码：7220
+* 兼容 MySQL 错误码：3520
+
+## ERROR 7221(SR001) : Function is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID, which has not been defined.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which has not been defined
+
+* OceanBase 错误码：7221
+* 兼容 MySQL 错误码：3521
+
+## ERROR 7222(SR001) : There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
+
+* OceanBase 错误码：7222
+* 兼容 MySQL 错误码：3548
+
+## ERROR 7223(01000) : There\'s no spatial reference system with SRID. The axis order is unknown.There\'s no spatial reference system with SRID %u. The axis order is unknown
+
+* OceanBase 错误码：7223
+* 兼容 MySQL 错误码：3565
+
+## ERROR 7224(22S00) : It has not been implemented for geographic spatial reference systems.%.192s(%.80s) has not been implemented for geographic spatial reference systems
+
+* OceanBase 错误码：7224
+* 兼容 MySQL 错误码：3618
+
+## ERROR 7225(HY000) : The SRID of the geometry does not match the SRID of the column. The SRID of the geometry is %lu, but the SRID of the column is %lu. Consider changing the SRID of the geometry or the SRID property of the column
+
+* OceanBase 错误码：7225
+* 兼容 MySQL 错误码：3643
+
+## ERROR 7226(HY000) : The SRID specification on the column cannot be changed because there is a spatial index on the column.The SRID specification on the column \'%.64s\' cannot be changed because there is a spatial index on the column. Please remove the spatial index before altering the SRID specification
+
+* OceanBase 错误码：7226
+* 兼容 MySQL 错误码：3644
+
+## ERROR 7227(HY000) : The spatial index on column will not be used by the query optimizer since the column does not have an SRID attribute.The spatial index on column \'%.64s\' will not be used by the query optimizer since the column does not have an SRID attribute. Consider adding an SRID attribute to the column
+
+* OceanBase 错误码：7227
+* 兼容 MySQL 错误码：3674
+
+## ERROR 7228(22S00) : Function is only defined for SRID 0 and SRID 4326.Function %.192s is only defined for SRID 0 and SRID 4326
+
+* OceanBase 错误码：7228
+* 兼容 MySQL 错误码：3682
+
+## ERROR 7229(22S00) : It has not been implemented for Cartesian spatial reference systems.%.192s(%.80s) has not been implemented for Cartesian spatial reference systems
+
+* OceanBase 错误码：7229
+* 兼容 MySQL 错误码：3704
+
+## ERROR 7230(22S00) : It has not been implemented for projected spatial reference systems.%.192s(%.80s) has not been implemented for projected spatial reference systems
+
+* OceanBase 错误码：7230
+* 兼容 MySQL 错误码：3705
+
+## ERROR 7231(SR006) : Missing mandatory attribute.Missing mandatory attribute %s
+
+* OceanBase 错误码：7231
+* 兼容 MySQL 错误码：3708
+
+## ERROR 7232(SR006) : Multiple definitions of attribute.Multiple definitions of attribute %s
+
+* OceanBase 错误码：7232
+* 兼容 MySQL 错误码：3709
+
+## ERROR 7233(SR006) : The spatial reference system name can\'t be an empty string or start or end with whitespace
+
+* OceanBase 错误码：7233
+* 兼容 MySQL 错误码：3710
+
+## ERROR 7234(SR006) : The organization name can\'t be an empty string or start or end with whitespace
+
+* OceanBase 错误码：7234
+* 兼容 MySQL 错误码：3711
+
+## ERROR 7235(SR004) : There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
+
+* OceanBase 错误码：7235
+* 兼容 MySQL 错误码：3712
+
+## ERROR 7236(01S00) : There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
+
+* OceanBase 错误码：7236
+* 兼容 MySQL 错误码：3713
+
+## ERROR 7237(SR000) : SRID 0 is not modifiable
+
+* OceanBase 错误码：7237
+* 兼容 MySQL 错误码：3713
+
+## ERROR 7238(01S01) : The SRID range has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade.The SRID range [%u, %u] has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade
+
+* OceanBase 错误码：7238
+* 兼容 MySQL 错误码：3715
+
+## ERROR 7239(SR005) : Can\'t modify SRID. There is at least one column depending on it.Can\'t modify SRID %u. There is at least one column depending on it
+
+* OceanBase 错误码：7239
+* 兼容 MySQL 错误码：3716
+
+## ERROR 7240(SR006) : Invalid character in attribute.Invalid character in attribute %s
+
+* OceanBase 错误码：7240
+* 兼容 MySQL 错误码：3717
+
+## ERROR 7241(SR006) : Attribute is too long.Attribute %s is too long. The maximum length is %u characters
+
+* OceanBase 错误码：7241
+* 兼容 MySQL 错误码：3717
+
+## ERROR 7242(22S00) : Function is only defined for geographic spatial reference systems, but one of its arguments is in SRID, which is not geographic.Function %s is only defined for geographic spatial reference systems, but one of its arguments is in SRID %u, which is not geographic
+
+* OceanBase 错误码：7242
+* 兼容 MySQL 错误码：3726
+
+## ERROR 7243(22023) : Function encountered a polygon that was too large. Polygons must cover less than half the planet.Function %s encountered a polygon that was too large. Polygons must cover less than half the planet
+
+* OceanBase 错误码：7243
+* 兼容 MySQL 错误码：3727
+
+## ERROR 7244(HY000) : Spatial indexes can\'t be primary or unique indexes
+
+* OceanBase 错误码：7244
+* 兼容 MySQL 错误码：3728
+
+## ERROR 7245(HY000) : The index type is not supported for spatial indexes.The index type %.20s is not supported for spatial indexes
+
+* OceanBase 错误码：7245
+* 兼容 MySQL 错误码：3729
+
+## ERROR 7246(22S02) : A parameter of function contains a geometry with longitude, which is out of range.A parameter of function %.192s contains a geometry with longitude %f, which is out of range. It must be within (%f, %f]
+
+* OceanBase 错误码：7246
+* 兼容 MySQL 错误码：3731
+
+## ERROR 7247(22S03) : A parameter of function contains a geometry with latitude, which is out of range.A parameter of function %.192s contains a geometry with latitude %f, which is out of range. It must be within [%f, %f]
+
+* OceanBase 错误码：7247
+* 兼容 MySQL 错误码：3732
+
+## ERROR 7248(SR002) : The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
+
+* OceanBase 错误码：7248
+* 兼容 MySQL 错误码：3736
+
+## ERROR 7249(SR002) : The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
+
+* OceanBase 错误码：7249
+* 兼容 MySQL 错误码：3736
+
+## ERROR 7250(SR002) : The inverse flattening must be larger than 1.0, or 0.0 if the ellipsoid is a sphere
+
+* OceanBase 错误码：7250
+* 兼容 MySQL 错误码：3738
+
+## ERROR 7251(SR002) : The angular unit conversion factor must be a positive number
+
+* OceanBase 错误码：7251
+* 兼容 MySQL 错误码：3739
+
+## ERROR 7252(SR002) : The prime meridian must be within (*180, 180] degrees, specified in the SRS angular unit
+
+* OceanBase 错误码：7252
+* 兼容 MySQL 错误码：3740
+
+## ERROR 7253(22S00) : Transformation from SRID is not supported.Transformation from SRID %u is not supported
+
+* OceanBase 错误码：7253
+* 兼容 MySQL 错误码：3741
+
+## ERROR 7254(22S00) : Transformation to SRID is not supported.Transformation to SRID %u is not supported
+
+* OceanBase 错误码：7254
+* 兼容 MySQL 错误码：3742
+
+## ERROR 7255(22S00) : Transformation from SRID %u is not supported. The spatial reference system has no TOWGS84 clause
+
+* OceanBase 错误码：7255
+* 兼容 MySQL 错误码：3743
+
+## ERROR 7256(22S00) : Transformation to SRID %u is not supported. The spatial reference system has no TOWGS84 clause
+
+* OceanBase 错误码：7256
+* 兼容 MySQL 错误码：3744
+
+## ERROR 7257(42000) : Cannot create a functional index on a function that returns a JSON or GEOMETRY value
+
+* OceanBase 错误码：7257
+* 兼容 MySQL 错误码：3753
+
+## ERROR 7258(HY000) : Spatial functional index is not supported
+
+* OceanBase 错误码：7258
+* 兼容 MySQL 错误码：3760
+
+## ERROR 7259(SU001) : The geometry passed to function is in SRID 0, which doesn\'t specify a length unit. Can\'t convert.The geometry passed to function %s is in SRID 0, which doesn\'t specify a length unit. Can\'t convert to \'%s\'
+
+* OceanBase 错误码：7259
+* 兼容 MySQL 错误码：3882
+
+## ERROR 7260(22S01) : Invalid cast.Invalid cast from %s to %s
+
+* OceanBase 错误码：7260
+* 兼容 MySQL 错误码：4032
+
+## ERROR 7261(22S04) : Invalid cast. A polygon ring is in the wrong direction.Invalid cast from %s to %s. A polygon ring is in the wrong direction
+
+* OceanBase 错误码：7261
+* 兼容 MySQL 错误码：4033
+
+## ERROR 7262(22S05) : Arguments to function contains geometries with different SRIDs. All geometries must have the same SRID.Arguments to function %s contains geometries with different SRIDs: %u and %u. All geometries must have the same SRID
+
+* OceanBase 错误码：7262
+* 兼容 MySQL 错误码：4034
+
+## ERROR 7263(22S02) : Longitude is out of range in function.Longitude %f is out of range in function %.192s. It must be within (%f, %f]
+
+* OceanBase 错误码：7263
+* 兼容 MySQL 错误码：3616
+
+## ERROR 7264(22S03) : Latitude is out of range in function.Latitude %f is out of range in function %.192s. It must be within [%f, %f]
+
+* OceanBase 错误码：7264
+* 兼容 MySQL 错误码：3617
+
+## ERROR 7265(HY000) : Memory allocation error.Memory allocation error: %*.256s in function %s
+
+* OceanBase 错误码：7265
+* 兼容 MySQL 错误码：3044
+
+## ERROR 7266(HY000) : Domain error.Domain error: %*.256s in function %s
+
+* OceanBase 错误码：7266
+* 兼容 MySQL 错误码：3045
+
+## ERROR 7267(HY000) : Length error.Length error: %*.256s in function %s
+
+* OceanBase 错误码：7267
+* 兼容 MySQL 错误码：3046
+
+## ERROR 7268(HY000) : Invalid argument error.Invalid argument error: %*.256s in function %s
+
+* OceanBase 错误码：7268
+* 兼容 MySQL 错误码：3047
+
+## ERROR 7269(HY000) : Out of range error.Out of range error: %*.256s in function %s
+
+* OceanBase 错误码：7269
+* 兼容 MySQL 错误码：3048
+
+## ERROR 7270(HY000) : Overflow error.Overflow error: %*.256s in function %s
+
+* OceanBase 错误码：7270
+* 兼容 MySQL 错误码：3049
+
+## ERROR 7271(HY000) : Range error.Range error: %*.256s in function %s
+
+* OceanBase 错误码：7271
+* 兼容 MySQL 错误码：3050
+
+## ERROR 7272(HY000) : Underflow error.Underflow error: %*.256s in function %s
+
+* OceanBase 错误码：7272
+* 兼容 MySQL 错误码：3051
+
+## ERROR 7273(HY000) : Logic error.Logic error: %*.256s in function %s
+
+* OceanBase 错误码：7273
+* 兼容 MySQL 错误码：3052
+
+## ERROR 7274(HY000) : Runtime error.Runtime error: %*.256s in function %s
+
+* OceanBase 错误码：7274
+* 兼容 MySQL 错误码：3053
+
+## ERROR 7275(HY000) : Unknown exception: %*.384s in function %s
+
+* OceanBase 错误码：7275
+* 兼容 MySQL 错误码：3054
+
+## ERROR 7276(22003) : Cannot get geometry object from data you send to the GEOMETRY field
+
+* OceanBase 错误码：7276
+* 兼容 MySQL 错误码：1416
+
+## ERROR 7277(HY000) : Incorrect usage of srid, srid column attribute only support in geometry
+
+* OceanBase 错误码：7277
+* 兼容 MySQL 错误码：1221
+
+## ERROR 7278(HY000) : Incorrect usage of spatial/fulltext/hash index and explicit index order
+
+* OceanBase 错误码：7278
+* 兼容 MySQL 错误码：1221
+
+## ERROR 7279(42000) : A SPATIAL index may only contain a geometrical type column
+
+* OceanBase 错误码：7279
+* 兼容 MySQL 错误码：1687
+
+## ERROR 7280(42000) : All parts of a SPATIAL index must be NOT NULL
+
+* OceanBase 错误码：7280
+* 兼容 MySQL 错误码：1252
+
+## ERROR 7281(HY000) : The index type is not supported for spatial indexes.The index type %s is not supported for spatial indexes
+
+* OceanBase 错误码：7281
+* 兼容 MySQL 错误码：3729
+
+## ERROR 7282(SU001) : There\'s no unit of measure.There\'s no unit of measure named \'%s\'
+
+* OceanBase 错误码：7282
+* 兼容 MySQL 错误码：3902
+
+## ERROR 7283(22023) : The string is not a valid key value pair in function.The string \'%.192s\' is not a valid key %c value pair in function %.192s
+
+* OceanBase 错误码：7283
+* 兼容 MySQL 错误码：3560
+
+## ERROR 7284(22023) : Invalid radius provided to function: Radius must be greater than zero.Invalid radius provided to function %s: Radius(%lf) must be greater than zero
+
+* OceanBase 错误码：7284
+* 兼容 MySQL 错误码：3706
+
+## ERROR 7285(SR001) : Spatial reference system is empty
+
+* OceanBase 错误码：7285
+* 兼容 MySQL 错误码：3548
+
+## ERROR 7286(22023) : Invalid option key in function.Invalid option key \'%.192s\' in function %.192s
+
+* OceanBase 错误码：7286
+* 兼容 MySQL 错误码：3558
+
+## ERROR 7287(22023) : Invalid value for option in function.Invalid value \'%.192s\' for option \'%.192s\' in function \'%.192s\'
+
+* OceanBase 错误码：7287
+* 兼容 MySQL 错误码：3559
+
+## ERROR 7288(22S01) : Unknown WKB type.Unknown WKB type(%d)! Full WKB type number was (%d)
+
+* OceanBase 错误码：7288
+* 兼容 MySQL 错误码：3516
