--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/8.8000-8999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/8.8000-8999-of-mysql-mode.md
@@ -38,3 +38,10 @@ ERROR 8004 (08004) : Packet cluster_id not match
 * 错误原因：OBServer 节点收到 RPC 的 `cluster_id` 是非预期的。常见的原因是另一个 OceanBase 集群的 Server 连接到了本集群。
 
 * 解决方式：如果确定是另一个集群的 OBServer 节点错误连接到本集群，这属于部署错误，需要尽快停止部署错误的集群。如果是其它原因，建议联系技术支持人员协助排查。
+
+## ERROR 8005(08005) : Tenant id not match
+
+* OceanBase 错误码：8005
+* 错误原因： 通过 Proxy 连接执行 SQL 的过程中，发生了租户改名。
+* 解决方式： 建议您在改租户名前断开 Proxy 连接，改完后重新连接。
+
