--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
@@ -694,6 +694,11 @@ ERROR 9086 (HY000) : backup advance checkpoint by flush timeout
 
 * 解决方式：请联系技术支持人员协助排查。
 
+## ERROR 9087(HY000) : observer clog is recycled before archive
+
+* OceanBase 错误码：9087
+* 错误原因：消费归档时归档文件已经被回收了。
+
 ## ERROR 9090 (HY000) : obesi process session not exist
 
 * OceanBase 错误码：9090
