--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/10.ora-50000-to-ora-99999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/10.ora-50000-to-ora-99999-of-oracle-mode.md
@@ -228,3 +228,10 @@ ORA-64601：duplicate RESTART specified
 * 错误原因：`ALTER SEQUENCE` 命令中指定了重复的 `RESTART` 指令。
 
 * 解决方式：删除重复的 `RESTART` 指令。
+
+## ORA-64403：Input cannot be null
+
+* OceanBase 错误码：5471
+* SQLSTATE：42000
+* 错误原因：输入不能为 NULL。
+* 解决方法：提供输入参数。
