--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -15,7 +15,7 @@ ORA-00000：PX DOP downgrade from %ld to %ld
 
 * 错误原因：正常退出。
 
-ORA-00000：parallel_max_servers downgrade due to insufficent  cpu resource from %ld to %ld. deprecated.
+ORA-00000：parallel_max_servers downgrade due to insufficent  cpu resource from %ld to %ld. deprecated
 ------------------------------------------------------------------------------------------------------------
 
 * OceanBase 错误码：5781
@@ -106,6 +106,12 @@ ORA-00054：resource busy and acquire with NOWAIT specified or timeout expired
 
 * 解决方式：重试或者增大超时时间。
 
+## ORA-00185：invalid argument for %s call
+
+* OceanBase 错误码：5488
+* SQLSTATE：HY000
+* 错误原因：%s 调用的参数无效。
+
 ORA-00060：deadlock detected while waiting for resource
 ---------------------------------------------------------------------------
 
@@ -146,50 +152,6 @@ ORA-00060：deadlock detected while waiting for resource
 * 错误原因：Stop Server 时等待租户降级超时。
 
 * 解决方式：重新发起 Stop Server 命令直到成功。
-
-ORA-00600：Invalid JSON text
--------------------------------------------------
-
-* OceanBase 错误码：5411
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：Invalid JSON text in argument
--------------------------------------------------------------
-
-* OceanBase 错误码：5412
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：The JSON binary value contains invalid data
----------------------------------------------------------------------------
-
-* OceanBase 错误码：5413
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：Invalid JSON path expression
-------------------------------------------------------------
-
-* OceanBase 错误码：5414
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
 ORA-00600：Cannot create a JSON value from a string
 ------------------------------------------------------------------------
@@ -268,17 +230,6 @@ ORA-00600：The JSON value is too big to be stored in a JSON column
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
-ORA-00600：The JSON object contains a key name that is too long
-------------------------------------------------------------------------------------
-
-* OceanBase 错误码：5422
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
 ORA-00600：JSON column '%.\*s' cannot be used in key specification
 ---------------------------------------------------------------------------------------
 
@@ -345,17 +296,6 @@ ORA-00600：The JSON document exceeds the maximum depth
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
-ORA-00600：JSON documents may not contain NULL member names
---------------------------------------------------------------------------------
-
-* OceanBase 错误码：5429
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
 ORA-00600：Invalid default value for \\'%.\*s\\'
 --------------------------------------------------------------------
 
@@ -378,27 +318,12 @@ ORA-00600：A path expression is not a path to a cell in an array
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
 
-ORA-00600：No value was found by '%.192s' on the specified path
-------------------------------------------------------------------------------------
+## ORA-40600：JSON_EQUAL used outside predicate
 
-* OceanBase 错误码：5432
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
-
-ORA-00600：More than one value was found by '%.192s' on the specified path
------------------------------------------------------------------------------------------------
-
-* OceanBase 错误码：5433
-
-* SQLSTATE：22032
-
-* 错误原因：内部错误码。
-
-* 解决方式：内部错误码。请联系技术支持工程师协助排查。
+* OceanBase 错误码：5448
+* SQLSTATE：42000
+* 错误原因：在谓词外部使用了 JSON_EQUAL。
+* 解决方法：在谓词中使用 JSON_EQUAL，例如将其嵌入 CASE 表达式中。
 
 ORA-00600：auto increment service busy
 ----------------------------------------------------------
@@ -432,6 +357,534 @@ ORA-00600：rowid num mismatch, expect %ld, actual %ld
 * 错误原因：内部错误码。
 
 * 解决方式：内部错误码。请联系技术支持工程师协助排查。
+
+## ORA-00600：Binary geometry function given two geometries of different srids.Binary geometry function %s given two geometries of different srids: %u and %u, which should have been identical
+
+* OceanBase 错误码：7201
+* SQLSTATE：HY000
+* 错误原因：二进制几何函数给出了两个不同 Srids : %u and %u，它们应该是相同的。作为参数传递给空间函数的几何值必须具有相同的 SRID 值。
+
+## ORA-00600：Calling geometry function with unsupported types of arguments.Calling geometry function %s with unsupported types of arguments
+
+* OceanBase 错误码：7202
+* SQLSTATE：HY000
+* 错误原因：使用不支持的参数类型调用几何函数  %s。
+
+## ORA-00600：Unknown GIS error occurred in function.Unknown GIS error occurred in function %s
+
+* OceanBase 错误码：7203
+* SQLSTATE：HY000
+* 错误原因：函数 %s 中发生未知的 GIS 错误。
+
+## ORA-00600：Unknown exception caught in GIS function.Unknown exception caught in GIS function %s
+
+* OceanBase 错误码：7204
+* SQLSTATE：HY000
+* 错误原因：GIS 函数 %s 中捕获到未知异常。
+
+## ORA-00600：Invalid GIS data provided to function.Invalid GIS data provided to function %s
+
+* OceanBase 错误码：7205
+* SQLSTATE：22023
+* 错误原因：提供给函数 %s 的无效 GIS 数据。使用未识别为有效几何值的参数调用空间函数。
+
+## ORA-00600：The geometry has no data in function.The geometry has no data in function %s
+
+* OceanBase 错误码：7206
+* SQLSTATE：HY000
+* 错误原因：几何在函数 %s 中没有数据。
+
+## ORA-00600：Unable to calculate centroid because geometry is empty in function.Unable to calculate centroid because geometry is empty in function %s
+
+* OceanBase 错误码：7207
+* SQLSTATE：HY000
+* 错误原因：无法计算质心，因为函数 %s 中的几何图形为空。
+
+## ORA-00600：Geometry overlay calculation error: geometry data is invalid in function.Geometry overlay calculation error: geometry data is invalid in function %s
+
+* OceanBase 错误码：7208
+* SQLSTATE：HY000
+* 错误原因：几何叠加计算错误，函数 %s 中的几何数据无效。
+
+## ORA-00600：Geometry turn info calculation error: geometry data is invalid in function.Geometry turn info calculation error: geometry data is invalid in function %s
+
+* OceanBase 错误码：7209
+* SQLSTATE：HY000
+* 错误原因：几何转向信息计算错误，几何数据在函数 %s 中无效。
+
+## ORA-00600：Analysis procedures of intersection points interrupted unexpectedly in function.Analysis procedures of intersection points interrupted unexpectedly in function %s
+
+* OceanBase 错误码：7210
+* SQLSTATE：HY000
+* 错误原因：交点分析过程在函数 %s 中意外中断。
+
+## ORA-00600：Unknown exception thrown in function.Unknown exception thrown in function %s
+
+* OceanBase 错误码：7211
+* SQLSTATE：HY000
+* 错误原因：函数 %s 中抛出的未知异常。
+
+## ORA-00600：Geometry byte string must be little endian
+
+* OceanBase 错误码：7212
+* SQLSTATE：HY000
+* 错误原因：几何字节字符串必须是小端序。
+
+## ORA-00600：Do not support online operation on table with GIS index
+
+* OceanBase 错误码：7213
+* SQLSTATE：HY000
+* 错误原因：不支持对具有 GIS 索引的表进行在线操作。
+
+## ORA-00600：Inconsistent intersection points.Inconsistent intersection points
+
+* OceanBase 错误码：7214
+* SQLSTATE：HY000
+* 错误原因：不一致的交叉点。
+
+## ORA-00600：Parameter exceeds the maximum number of points in a geometryin function.Parameter %s exceeds the maximum number of points in a geometry (%lu) in function %s
+
+* OceanBase 错误码：7215
+* SQLSTATE：HY000
+* 错误原因：参数 %s 超过函数 %s 中几何图形 (%lu) 的最大点数。
+
+## ORA-00600：value is a geometry of unexpected type.%.64s value is a geometry of unexpected type %.64s in %.64s
+
+* OceanBase 错误码：7216
+* SQLSTATE：22S01
+* 错误原因：%s 值是 %s 中意外类型 %s 的几何图形。
+
+## ORA-00600：Can\'t parse the spatial reference system definition of SRID.Can\'t parse the spatial reference system definition of SRID %u
+
+* OceanBase 错误码：7217
+* SQLSTATE：SR002
+* 错误原因：无法解析 SRID %u 的空间参考系统定义。
+
+## ORA-00600：The spatial reference system definition for SRID does not specify the mandatory (EPSG) projection parameter.The spatial reference system definition for SRID %u does not specify the mandatory %s (EPSG %u) projection parameter
+
+* OceanBase 错误码：7218
+* SQLSTATE：SR003
+* 错误原因：SRID %u 的空间参考系统定义未指定强制性 %s (EPSG %u) 投影参数。
+
+## ORA-00600：There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
+
+* OceanBase 错误码：7219
+* SQLSTATE：01000
+* 错误原因：没有 SRID %u 的空间参考系统。
+
+## ORA-00600：Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which is not Cartesian
+
+* OceanBase 错误码：7220
+* SQLSTATE：22S00
+* 错误原因：函数 %s 仅为笛卡尔空间参考系统定义，但其参数之一在 SRID %u 中，这不是笛卡尔空间参考系统。
+
+## ORA-00600：Function is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID, which has not been defined.Function %s is only defined for Cartesian spatial reference systems, but one of its arguments is in SRID %u, which has not been defined
+
+* OceanBase 错误码：7221
+* SQLSTATE：SR001
+* 错误原因：函数 %s 仅为笛卡尔空间参考系统定义，但其参数之一在尚未定义的 SRID %u 中。
+
+## ORA-00600：There\'s no spatial reference system with SRID.There\'s no spatial reference system with SRID %u
+
+* OceanBase 错误码：7222
+* SQLSTATE：SR001
+* 错误原因：没有 SRID %u 的空间参考系统。
+
+## ORA-00600：There\'s no spatial reference system with SRID. The axis order is unknown.There\'s no spatial reference system with SRID %u. The axis order is unknown
+
+* OceanBase 错误码：7223
+* SQLSTATE：01000
+* 错误原因：没有 SRID %u 的空间参考系统。轴顺序未知。
+
+## ORA-00600：It has not been implemented for geographic spatial reference systems.%.192s(%.80s) has not been implemented for geographic spatial reference systems
+
+* OceanBase 错误码：7224
+* SQLSTATE：22S00
+* 错误原因：%s(%s) 尚未针对地理空间参考系统实施。
+
+## ORA-00600：The SRID of the geometry does not match the SRID of the column. The SRID of the geometry is %lu, but the SRID of the column is %lu. Consider changing the SRID of the geometry or the SRID property of the column
+
+* OceanBase 错误码：7225
+* SQLSTATE：HY000
+* 错误原因：几何的 SRID 与列 '%s' 的 SRID 不匹配。几何的 SRID 是 %lu，但列的 SRID 是 %lu。考虑更改几何的 SRID 或列的 SRID 属性。
+
+## ORA-00600：The SRID specification on the column cannot be changed because there is a spatial index on the column.The SRID specification on the column \'%.64s\' cannot be changed because there is a spatial index on the column. Please remove the spatial index before altering the SRID specification
+
+* OceanBase 错误码：7226
+* SQLSTATE：HY000
+* 错误原因：无法更改列 '%s' 上的 SRID 规范，因为该列上有空间索引。请在更改 SRID 规范之前删除空间索引。
+
+## ORA-00600：The spatial index on column will not be used by the query optimizer since the column does not have an SRID attribute.The spatial index on column \'%.64s\' will not be used by the query optimizer since the column does not have an SRID attribute. Consider adding an SRID attribute to the column
+
+* OceanBase 错误码：7227
+* SQLSTATE：HY000
+* 错误原因：查询优化器不会使用列“%s”上的空间索引，因为该列没有 SRID 属性。考虑将 SRID 属性添加到列中。
+
+## ORA-00600：Function is only defined for SRID 0 and SRID 4326.Function %.192s is only defined for SRID 0 and SRID 4326
+
+* OceanBase 错误码：7228
+* SQLSTATE：22S00
+* 错误原因：函数 %s 仅为 SRID 0 和 SRID 4326 定义。
+
+## ORA-00600：It has not been implemented for Cartesian spatial reference systems.%.192s(%.80s) has not been implemented for Cartesian spatial reference systems
+
+* OceanBase 错误码：7229
+* SQLSTATE：22S00
+* 错误原因：%s(%s) 尚未针对笛卡尔空间参考系统实现。
+
+## ORA-00600：It has not been implemented for projected spatial reference systems.%.192s(%.80s) has not been implemented for projected spatial reference systems
+
+* OceanBase 错误码：7230
+* SQLSTATE：22S00
+* 错误原因：%s(%s) 尚未针对投影空间参考系统实施。
+
+## ORA-00600：Missing mandatory attribute.Missing mandatory attribute %s
+
+* OceanBase 错误码：7231
+* SQLSTATE：SR006
+* 错误原因：缺少强制属性 %s。
+
+## ORA-00600：Multiple definitions of attribute.Multiple definitions of attribute %s
+
+* OceanBase 错误码：7232
+* SQLSTATE：SR006
+* 错误原因：属性 %s 的多个定义。
+
+## ORA-00600：The spatial reference system name can\'t be an empty string or start or end with whitespace
+
+* OceanBase 错误码：7233
+* SQLSTATE：SR006
+* 错误原因：空间参考系统名称不能为空字符串，也不能以空格开头或结尾。
+
+## ORA-00600：The organization name can\'t be an empty string or start or end with whitespace
+
+* OceanBase 错误码：7234
+* SQLSTATE：SR006
+* 错误原因：组织名称不能为空字符串，也不能以空格开头或结尾。
+
+## ORA-00600：There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
+
+* OceanBase 错误码：7235
+* SQLSTATE：SR004
+* 错误原因：已经存在 SRID 为 %u 的空间参考系统。
+
+## ORA-00600：There is already a spatial reference system with SRID.There is already a spatial reference system with SRID %u
+
+* OceanBase 错误码：7236
+* SQLSTATE：01S00
+* 错误原因：已经存在 SRID 为 %u 的空间参考系统。
+
+## ORA-00600：SRID 0 is not modifiable
+
+* OceanBase 错误码：7237
+* SQLSTATE：SR000
+* 错误原因：SRID 0 不可修改。
+
+## ORA-00600：The SRID range has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade.The SRID range [%u, %u] has been reserved for system use. SRSs in this range may be added, modified or removed without warning during upgrade
+
+* OceanBase 错误码：7238
+* SQLSTATE：01S01
+* 错误原因：SRID 范围 [%u, %u] 已保留供系统使用。在升级过程中，可能会在没有警告的情况下添加、修改或删除此范围内的 SRS。
+
+## ORA-00600：Can\'t modify SRID. There is at least one column depending on it.Can\'t modify SRID %u. There is at least one column depending on it
+
+* OceanBase 错误码：7239
+* SQLSTATE：SR005
+* 错误原因：无法修改 SRID %u。至少有一列取决于它。
+
+## ORA-00600：Invalid character in attribute.Invalid character in attribute %s
+
+* OceanBase 错误码：7240
+* SQLSTATE：SR006
+* 错误原因：属性 %s 中的字符无效。
+
+## ORA-00600：Attribute is too long.Attribute %s is too long. The maximum length is %u characters
+
+* OceanBase 错误码：7241
+* SQLSTATE：SR006
+* 错误原因：属性 %s 太长。最大长度为 %u 个字符。
+
+## ORA-00600：Function is only defined for geographic spatial reference systems, but one of its arguments is in SRID, which is not geographic.Function %s is only defined for geographic spatial reference systems, but one of its arguments is in SRID %u, which is not geographic
+
+* OceanBase 错误码：7242
+* SQLSTATE：22S00
+* 错误原因：函数 %s 仅为地理空间参考系统定义，但其参数之一在 SRID %u 中，这不是地理。
+
+## ORA-00600：Function encountered a polygon that was too large. Polygons must cover less than half the planet.Function %s encountered a polygon that was too large. Polygons must cover less than half the planet
+
+* OceanBase 错误码：7243
+* SQLSTATE：22023
+* 错误原因：函数 %s 遇到一个太大的多边形。
+
+## ORA-00600：Spatial indexes can\'t be primary or unique indexes
+
+* OceanBase 错误码：7244
+* SQLSTATE：HY000
+* 错误原因：空间索引不能是主索引或唯一索引。
+
+## ORA-00600：The index type is not supported for spatial indexes.The index type %.20s is not supported for spatial indexes
+
+* OceanBase 错误码：7245
+* SQLSTATE：HY000
+* 错误原因：空间索引不支持索引类型 %s。
+
+## ORA-00600：A parameter of function contains a geometry with longitude, which is out of range.A parameter of function %.192s contains a geometry with longitude %f, which is out of range. It must be within (%f, %f]
+
+* OceanBase 错误码：7246
+* SQLSTATE：22S02
+* 错误原因：函数 %s 的参数包含经度为 %f 的几何图形，超出范围。它必须在  (%f, %f]  之内。
+
+## ORA-00600：A parameter of function contains a geometry with latitude, which is out of range.A parameter of function %.192s contains a geometry with latitude %f, which is out of range. It must be within [%f, %f]
+
+* OceanBase 错误码：7247
+* SQLSTATE：22S03
+* 错误原因：函数 %s 的参数包含纬度为 %f 的几何图形，超出范围。它必须在 [%f, %f] 之内。
+
+## ORA-00600：The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
+
+* OceanBase 错误码：7248
+* SQLSTATE：SR002
+* 错误原因：SRID %u 的空间参考系统定义指定了无效的地理轴“%s”和“%s”。一个轴必须是 NORTH 或 SOUTH，另一个必须是 EAST 或 WEST。
+
+## ORA-00600：The spatial reference system definition for SRID specifies invalid geographic axes. One axis must be NORTH or SOUTH and the other must be EAST or WEST.he spatial reference system definition for SRID %u specifies invalid geographic axes \'%.20s\' and \'%.20s\'. One axis must be NORTH or SOUTH and the other must be EAST or WEST
+
+* OceanBase 错误码：7249
+* SQLSTATE：SR002
+* 错误原因：SRID %u 的空间参考系统定义指定了无效的地理轴“%s”和“%s”。一个轴必须是 NORTH 或 SOUTH，另一个必须是 EAST 或 WEST。
+
+## ORA-00600：The inverse flattening must be larger than 1.0, or 0.0 if the ellipsoid is a sphere
+
+* OceanBase 错误码：7250
+* SQLSTATE：SR002
+* 错误原因：逆展平必须大于 1.0，如果椭圆体是球体，则为 0.0。
+
+## ORA-00600：The angular unit conversion factor must be a positive number
+
+* OceanBase 错误码：7251
+* SQLSTATE：SR002
+* 错误原因：角度单位转换因子必须是正数。
+
+## ORA-00600：The prime meridian must be within (*180, 180] degrees, specified in the SRS angular unit
+
+* OceanBase 错误码：7252
+* SQLSTATE：SR002
+* 错误原因：本初子午线必须在 (*180, 180] 度内，以 SRS 角度单位指定。
+
+## ORA-00600：Transformation from SRID is not supported.Transformation from SRID %u is not supported
+
+* OceanBase 错误码：7253
+* SQLSTATE：22S00
+* 错误原因：不支持来自 SRID %u 的转换。
+
+## ORA-00600：Transformation to SRID is not supported.Transformation to SRID %u is not supported
+
+* OceanBase 错误码：7254
+* SQLSTATE：22S00
+* 错误原因：不支持转换为 SRID %u。
+
+## ORA-00600：Transformation from SRID %u is not supported. The spatial reference system has no TOWGS84 clause
+
+* OceanBase 错误码：7255
+* SQLSTATE：22S00
+* 错误原因：不支持来自 SRID %u 的转换。空间参考系统没有 TOWGS84 子句。
+
+## ORA-00600：Transformation to SRID %u is not supported. The spatial reference system has no TOWGS84 clause
+
+* OceanBase 错误码：7256
+* SQLSTATE：22S00
+* 错误原因：不支持转换为 SRID %u。空间参考系统没有 TOWGS84 子句。
+
+## ORA-00600：Cannot create a functional index on a function that returns a JSON or GEOMETRY value
+
+* OceanBase 错误码：7257
+* SQLSTATE：42000
+* 错误原因：无法在返回 JSON 或 GEOMETRY 值的函数上创建函数索引。
+
+## ORA-00600：Spatial functional index is not supported
+
+* OceanBase 错误码：7258
+* SQLSTATE：HY000
+* 错误原因：不支持空间功能索引。
+
+## ORA-00600：The geometry passed to function is in SRID 0, which doesn\'t specify a length unit. Can\'t convert.The geometry passed to function %s is in SRID 0, which doesn\'t specify a length unit. Can\'t convert to \'%s\'
+
+* OceanBase 错误码：7259
+* SQLSTATE：SU001
+* 错误原因：传递给函数 %s 的几何在 SRID 0 中，它没有指定长度单位，无法转换为“%s”。
+
+## ORA-00600：Invalid cast.Invalid cast from %s to %s
+
+* OceanBase 错误码：7260
+* SQLSTATE：22S01
+* 错误原因：从 %s 到 %s 的转换无效。
+
+## ORA-00600：Invalid cast. A polygon ring is in the wrong direction.Invalid cast from %s to %s. A polygon ring is in the wrong direction
+
+* OceanBase 错误码：7261
+* SQLSTATE：22S04
+* 错误原因：从 %s 到 %s 的转换无效。多边形环的方向错误。
+
+## ORA-00600：Arguments to function contains geometries with different SRIDs. All geometries must have the same SRID.Arguments to function %s contains geometries with different SRIDs: %u and %u. All geometries must have the same SRID
+
+* OceanBase 错误码：7262
+* SQLSTATE：22S05
+* 错误原因：函数 %s 的参数包含具有不同 SRID 的几何图形 %u 和 %u。所有几何图形必须具有相同的 SRID。
+
+## ORA-00600：Longitude is out of range in function.Longitude %f is out of range in function %.192s. It must be within (%f, %f]
+
+* OceanBase 错误码：7263
+* SQLSTATE：22S02
+* 错误原因：经度 %f 超出函数 %s 的范围。它必须在 (%f, %f] 之内。
+
+## ORA-00600：Latitude is out of range in function.Latitude %f is out of range in function %.192s. It must be within [%f, %f]
+
+* OceanBase 错误码：7264
+* SQLSTATE：22S03
+* 错误原因：纬度 %f 超出函数 %s 的范围。它必须在 [%f, %f] 之内。
+
+## ORA-00600：Memory allocation error.Memory allocation error: %*.256s in function %s
+
+* OceanBase 错误码：7265
+* SQLSTATE：HY000
+* 错误原因：内存分配错误：函数 %s 中的 %s。
+
+## ORA-00600：Domain error.Domain error: %*.256s in function %s
+
+* OceanBase 错误码：7266
+* SQLSTATE：HY000
+* 错误原因：域错误，函数 %s 中的 %s。
+
+## ORA-00600：Length error.Length error: %*.256s in function %s
+
+* OceanBase 错误码：7267
+* SQLSTATE：HY000
+* 错误原因：长度错误，函数 %s 中的 %s。
+
+## ORA-00600：Invalid argument error.Invalid argument error: %*.256s in function %s
+
+* OceanBase 错误码：7268
+* SQLSTATE：HY000
+* 错误原因：无效参数错误，函数 %s 中的 %s。
+
+## ORA-00600：Out of range error.Out of range error: %*.256s in function %s
+
+* OceanBase 错误码：7269
+* SQLSTATE：HY000
+* 错误原因：超出范围错误，函数 %s 中的 %s。
+
+## ORA-00600：Overflow error.Overflow error: %*.256s in function %s
+
+* OceanBase 错误码：7270
+* SQLSTATE：HY000
+* 错误原因：溢出错误，函数 %s 中的 %s。
+
+## ORA-00600：Range error.Range error: %*.256s in function %s
+
+* OceanBase 错误码：7271
+* SQLSTATE：HY000
+* 错误原因：范围错误，函数 %s 中的 %s。
+
+## ORA-00600：Underflow error.Underflow error: %*.256s in function %s
+
+* OceanBase 错误码：7272
+* SQLSTATE：HY000
+* 错误原因：下溢错误，函数 %s 中的 %s。
+
+## ORA-00600：Logic error.Logic error: %*.256s in function %s
+
+* OceanBase 错误码：7273
+* SQLSTATE：HY000
+* 错误原因：逻辑错误，函数 %s 中的 %s。
+
+## ORA-00600：Runtime error.Runtime error: %*.256s in function %s
+
+* OceanBase 错误码：7274
+* SQLSTATE：HY000
+* 错误原因：运行时错误，函数 %s 中的 %s。
+
+## ORA-00600：Unknown exception: %*.384s in function %s
+
+* OceanBase 错误码：7275
+* SQLSTATE：HY000
+* 错误原因：未知异常 函数 %s 中的 %s。
+
+## ORA-00600：Cannot get geometry object from data you send to the GEOMETRY field
+
+* OceanBase 错误码：7276
+* SQLSTATE：22003
+* 错误原因：无法从您发送到 GEOMETRY 字段的数据中获取几何对象。
+
+## ORA-00600：Incorrect usage of srid, srid column attribute only support in geometry
+
+* OceanBase 错误码：7277
+* SQLSTATE：HY000
+* 错误原因：Srid 的使用不正确，Srid 列属性仅在几何体中支持。
+
+## ORA-00600：Incorrect usage of spatial/fulltext/hash index and explicit index order
+
+* OceanBase 错误码：7278
+* SQLSTATE：HY000
+* 错误原因：空间/全文/哈希索引和显式索引顺序的使用不正确。
+
+## ORA-00600：A SPATIAL index may only contain a geometrical type column
+
+* OceanBase 错误码：7279
+* SQLSTATE：42000
+* 错误原因：SPATIAL 索引可能只包含几何类型的列。
+
+## ORA-00600：All parts of a SPATIAL index must be NOT NULL
+
+* OceanBase 错误码：7280
+* SQLSTATE：42000
+* 错误原因：SPATIAL 索引的所有部分都必须为 NOT NULL。
+
+## ORA-00600：The index type is not supported for spatial indexes.The index type %s is not supported for spatial indexes
+
+* OceanBase 错误码：7281
+* SQLSTATE：HY000
+* 错误原因：空间索引不支持索引类型 %s。
+
+## ORA-00600：There\'s no unit of measure.There\'s no unit of measure named \'%s\'
+
+* OceanBase 错误码：7282
+* SQLSTATE：SU001
+* 错误原因：没有名为 "%s" 的度量单位。
+
+## ORA-00600：The string is not a valid key value pair in function.The string \'%.192s\' is not a valid key %c value pair in function %.192s
+
+* OceanBase 错误码：7283
+* SQLSTATE：22023
+* 错误原因：字符串 '%s' 不是函数 %s 中的有效键 %c 值对。
+
+## ORA-00600：Invalid radius provided to function: Radius must be greater than zero.Invalid radius provided to function %s: Radius(%lf) must be greater than zero
+
+* OceanBase 错误码：7284
+* SQLSTATE：22023
+* 错误原因：提供给函数 %s 的半径无效：半径必须大于零。
+
+## ORA-00600：Spatial reference system is empty
+
+* OceanBase 错误码：7285
+* SQLSTATE：SR001
+* 错误原因：没有 SRID %u 的空间参考系统。
+
+## ORA-00600：Invalid option key in function.Invalid option key \'%.192s\' in function %.192s
+
+* OceanBase 错误码：7286
+* SQLSTATE：22023
+* 错误原因：函数 %s 中的选项键“%s”无效。
+
+## ORA-00600：Invalid value for option in function.Invalid value \'%.192s\' for option \'%.192s\' in function \'%.192s\'
+
+* OceanBase 错误码：7287
+* SQLSTATE：22023
+* 错误原因：函数“%s”中的选项“%s”的值“%s”无效。
+
+## ORA-00600：Unknown WKB type.Unknown WKB type(%d)! Full WKB type number was (%d)
+
+* OceanBase 错误码：7288
+* SQLSTATE：22S01
+* 错误原因：%s 值是 %s 中意外类型 %s 的几何图形。
 
 ORA-00603：Prepare statement checksum error
 ---------------------------------------------------------------
@@ -698,6 +1151,13 @@ ORA-00959：tablespace '%.\*s' does not exist
 * SQLSTATE：HY000
 
 * 错误原因：表空间不存在。
+
+## ORA-00964：table name not in FROM list
+
+* OceanBase 错误码：5490
+* SQLSTATE：42000
+* 错误原因：表名不在 FROM 列表中。
+* 解决方法：确认输入的名字是一个正确的表名，并且在 From 列表中。
 
 ORA-00969：missing ON keyword
 -------------------------------------------------
