--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/3.ora-01000-to-ora-01499-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/3.ora-01000-to-ora-01499-of-oracle-mode.md
@@ -74,6 +74,13 @@ ORA-01006：bind variable does not exist
 
 * 解决方法：需要绑定一个已定义的变量。
 
+## ORA-01007：variable not in select list", 1007, "variable not in select list
+
+* OceanBase 错误码：9745
+* SQLSTATE：HY000
+* 错误原因：变量不在选择列表中。
+* 解决方式：需要您查看输入的 SQL 语句是否正确。
+
 ORA-01008：not all variables bound
 ------------------------------------------------------
 
