--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/4.ora-01500-to-ora-01999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/4.ora-01500-to-ora-01999-of-oracle-mode.md
@@ -236,6 +236,20 @@ ORA-01741：illegal zero-length identifier
 
 * 错误原因：非法的零长度标识符。
 
+## ORA-01741：illegal zero-length identifier
+
+* OceanBase 错误码：5455
+* SQLSTATE：42000
+* 错误原因：试图使用两个双引号 ("") 作为标识符。标识符必须至少有一个字符长。
+* 解决方法：在标识符的双引号之间插入至少一个字符。如果需要空白标识符，请在双引号 (" ") 之间指定一个空格。
+
+## ORA-01747：invalid user.table.column, table.column, or column specification
+
+* OceanBase 错误码：5457
+* SQLSTATE：42000
+* 错误原因：无效的 user.table.column、table.column 或列规范。
+* 解决方法：更正并重新发出命令。
+
 ORA-01743：only pure functions can be indexed
 -----------------------------------------------------------------
 
