--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/5.ora-02000-to-ora-04999-of-oracle-mode.md
@@ -6,6 +6,13 @@ ORA-02000 ~ ORA-04999
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
   </main>
 
+## ORA-02000：missing VALUE keyword
+
+* OceanBase 错误码：5466
+* SQLSTATE：HY000
+* 错误原因：缺少 VALUE 关键字。
+* 解决方法： 补全表达式中的 VALUE  字段。
+
 ORA-02014：cannot select FOR UPDATE from view with DISTINCT GROUP BY etc
 ---------------------------------------------------------------------------------------------
 
@@ -766,6 +773,12 @@ ORA-04042：procedure, function, package, or package body does not exist
 * 错误原因：尝试访问不存在的过程、函数，程序包或程序包主体。
 
 * 解决方法：请检查访问的对象的名称是否正确。
+
+## ORA-04045：errors during recompilation/revalidation of %.*s.%.*s
+
+* OceanBase 错误码：9744
+* SQLSTATE：HY000
+* 错误原因：%.*s 的重新编译/重新验证过程中出错。
 
 ORA-04047：object specified is incompatible with the flag specified
 ---------------------------------------------------------------------------------------
