--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/6.ora-05000-to-ora-10000-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/6.ora-05000-to-ora-10000-of-oracle-mode.md
@@ -196,6 +196,13 @@
 
 * 解决方法：指定有效对象的名称，去除无效的结尾部分。
 
+## ORA-06575：Package or function PRO is in an invalid state
+
+* OceanBase 错误码：5465
+* SQLSTATE：42000
+* 错误原因：SQL 语句引用了处于无效状态的 PL/SQL 函数。
+* 解决方法：检查 SQL 语句和 PL/SQL 函数是否存在语法错误或未正确分配或缺少引用对象的权限。
+
 ## ORA-06576：not a valid function or procedure name
 
 * Ocean Base 错误码：5980
