--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -494,10 +494,6 @@ ORA-14253：table is not partitioned by composite partition method
 
   * `ALTER TABLE MODIFY SUBPARTITION [UNUSABLE LOCAL INDEXES | REBUILD UNUSABLE LOCAL INDEXES]` 语句中的表未使用组合分区方法分区。
 
-*
-
-*
-
 * 解决方式：确保表按组合分区方法进行分区。
 
 ORA-14265：data type or length of a
@@ -566,6 +562,12 @@ ORA-14312：invalid time limit specified
 * 错误原因：`dbms_lock.sleep(time)` 包的入参 `time` 指定了一个非正值。
 
 * 解决方式：指定一个正值。
+
+## ORA-14318：DEFAULT partition must be last partition specified
+
+* OceanBase 错误码：5491
+* SQLSTATE：42000
+* 错误原因：DEFAULT 分区必须是最后指定的分区。
 
 ORA-14400：inserted partition key does not map to any partition
 -----------------------------------------------------------------------------------
