--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/9.ora-30000-to-ora-49999-of-oracle-mode.md
@@ -378,6 +378,13 @@ ORA-30929：ORDER SIBLINGS BY clause not allowed here
 
 * 解决方法：删除 `ORDER SIBLINGS BY` 子句或者在查询中添加 `CONNECT BY` 子句。
 
+## ORA-30929：ORDER SIBLINGS BY clause not allowed here
+
+* OceanBase 错误码：5451
+* SQLSTATE：42000
+* 错误原因：在没有 CONNECT BY 子句的查询中指定了 ORDER SIBLINGS BY 子句。
+* 解决方法：删除 ORDER SIBLINGS BY 子句或添加 CONNECT BY 子句。
+
 ORA-30929：ORDER SIBLINGS BY clause not allowed here
 ------------------------------------------------------------------------
 
@@ -399,6 +406,13 @@ ORA-30930：NOCYCLE keyword is required with CONNECT_BY_ISCYCLE pseudo column
 * 错误原因：在查询中指定了 `CONNECT_BY_ISCYCLE`，但是该查询不包含 `NOCYCLE` 关键字。
 
 * 解决方法：删除 `CONNECT_BY_ISCYCLE` 或添加 `NOCYCLE` 关键字。
+
+## ORA-30980：Invalid Input
+
+* OceanBase 错误码：5462
+* SQLSTATE：42000
+* 错误原因：类型转换失败，无效输入。
+* 解决方法：输入类型正确的数据。
 
 ORA-31011：XML parsing failed
 -------------------------------------------------
@@ -911,6 +925,303 @@ ORA-39962：invalid parameter for PLSQL_CCFLAGS
 * 错误原因：`PLSQL_CCFLAGS` 参数的值无效。
 
 * 解决方法：为 `PLSQL_CCFLAGS` 参数指定一个有效值。
+
+## ORA-40441：JSON syntax error
+
+* OceanBase 错误码：5411
+* SQLSTATE：22032
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 数据语法无效，无法解析。
+* 解决方式：请检查输入的 JSON 数据，提供具有正确语法的 JSON 数据。
+
+## ORA-40441：JSON syntax error
+
+* OceanBase 错误码：5412
+* SQLSTATE：22032
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 数据语法无效，无法解析。
+* 解决方式：请检查输入的 JSON 数据，提供具有正确语法的 JSON 数据。
+
+## ORA-40441：JSON syntax error
+
+* OceanBase 错误码：5447
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 数据语法无效，无法解析。
+* 解决方法：提供具有正确语法的 JSON 数据。
+
+## ORA-40442：JSON path expression syntax error ('INT')
+
+* OceanBase 错误码：5414
+* SQLSTATE：22032
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式语法无效，无法解析。
+* 解决方式：提供具有正确语法的 JSON 路径表达式。
+
+## ORA-40442：JSON path expression syntax error ('INT').JSON path expression syntax error ('%s')
+
+* OceanBase 错误码：5442
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式语法无效，无法解析。
+* 解决方法：提供具有正确语法的 JSON 路径表达式。
+
+## ORA-40449：invalid data type for return value
+
+* OceanBase 错误码：5443
+* SQLSTATE：42000
+* 错误原因：为返回值提供的数据类型无效或不受支持。
+* 解决方法：提供一个支持的返回值。
+
+## ORA-40450：invalid '%s' clause
+
+* OceanBase 错误码：5460
+* SQLSTATE：42000
+* 错误原因："%s" 语句无效。
+* 解决方法：提供正确的 "%s" 语句。
+
+## ORA-40451：invalid default value provided
+
+* OceanBase 错误码：5486
+* SQLSTATE：42000
+* 错误原因：提供的默认值无效。
+
+## ORA-40452：default value not matching type defined in RETURNING clause
+
+* OceanBase 错误码：5474
+* SQLSTATE：42000
+* 错误原因：默认值与 RETURNING 语句中定义的类型不匹配。
+* 解决方法：确保默认值和 RETURNING 子句属于同一类型。
+
+## ORA-40454：path expression not a literal
+
+* OceanBase 错误码：5487
+* SQLSTATE：42000
+* 错误原因：路径表达式不是文字。
+
+## ORA-40455：default value not a literal
+
+* OceanBase 错误码：5446
+* SQLSTATE：42000
+* 错误原因：提供的默认值不是文字（常量）。
+* 解决方法：提供一个恒定的默认值。
+
+## ORA-40456：JSON_VALUE evaluated to non*scalar value
+
+* OceanBase 错误码：5444
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式选择了一个非标量值。
+* 解决方法： 更正 JSON 路径表达式或使用 JSON_QUERY。
+
+## ORA-40459：output value too large (actual: %d, maximum: %d)
+
+* OceanBase 错误码：5473
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 运算符生成的结果超出了 RETURN 子句中指定的最大长度。
+* 解决方法：增加 RETURNING 子句中数据类型的最大最小，或在 RETURNING 子句中使用 CLOB/BLOB。
+
+## ORA-40462：No value was found by '%.192s' on the specified path
+
+* OceanBase 错误码：5432
+* SQLSTATE：22035
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式未选择值。
+* 解决方式：更正 JSON 路径表达式。
+
+## ORA-40462：JSON_VALUE evaluated to no value
+
+* OceanBase 错误码：5445
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式未选择值。
+* 解决方法：更正 JSON 路径表达式。
+
+## ORA-40470：More than one value was found by '%.192s' on the specified path
+
+* OceanBase 错误码：5433
+* SQLSTATE：22034
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 路径表达式选择了多个值。
+* 解决方式：更正 JSON 路径表达式或使用 JSON_QUERY。
+
+## ORA-40473：duplicate key names in JSON object
+
+* OceanBase 错误码：5453
+* SQLSTATE：42000
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 数据在一个对象中具有重复的键名。
+* 解决方法：在每个 JSON 对象中提供具有唯一键名的 JSON 数据。
+
+## ORA-40476：JSON key too long
+
+* OceanBase 错误码：5422
+* SQLSTATE：22032
+* 错误原因：提供的 JavaScript 对象表示法 (JSON) 数据有一个超过最大长度的键。
+* 解决方式：提供具有较短键名的 JSON 数据。
+
+## ORA-40480：result cannot be returned without array wrapper
+
+* OceanBase 错误码：5449
+* SQLSTATE：42000
+* 错误原因：如果没有数组包装，则无法返回结果。
+
+## ORA-40481：ASCII or PRETTY not supported for non*textual return data type
+
+* OceanBase 错误码：5469
+* SQLSTATE：42000
+* 错误原因：尝试为 JavaScript 对象表示法 (JSON) 操作的非文本输出打印或转义非 ASCII 字符。
+* 解决方法：将返回数据类型更改为 VARCHAR2 或 CLOB，或删除 PRETTY 或 ASCII 序列化选项。
+
+## ORA-40484：invalid data type for '%s' column
+
+* OceanBase 错误码：5459
+* SQLSTATE：42000
+* 错误原因："%s" 列的数据类型无效。
+* 解决方法：请输入正确的 "%s" 列信息。
+
+## ORA-40487：invalid usage of keyword EXISTS
+
+* OceanBase 错误码：5480
+* SQLSTATE：42000
+* 错误原因：存在非法使用的关键字，表达式的语法错误。
+
+## ORA-40491：invalid input data type for JSON_TABLE
+
+* OceanBase 错误码：5481
+* SQLSTATE：42000
+* 错误原因：JSON_TABLE 输入的数据类型无效。
+
+## ORA-40560：JSON_TABLE nested path expressions not disjunct
+
+* OceanBase 错误码：5483
+* SQLSTATE：42000
+* 错误原因：JSON_TABLE 同一级下的path路径不能重复。
+
+## ORA-40565：JSON path expression did not select a value
+
+* OceanBase 错误码：5468
+* SQLSTATE：42000
+* 错误原因：JavaScript 对象表示法 (JSON) 路径表达式未选择值。
+* 解决方法：更正 JSON 路径表达式。
+
+## ORA-40566：JSON path expression selected a value of different data type
+
+* OceanBase 错误码：5467
+* SQLSTATE：42000
+* 错误原因：JavaScript 对象表示法 (JSON) 路径表达式选择了与请求的数据类型不同的数据类型值。
+* 解决方法：使用另一个“get*method”来检索由 JSON 路径表达式选择的值。
+
+## ORA-40569：Unimplemented JSON feature
+
+* OceanBase 错误码：5479
+* SQLSTATE：42000
+* 错误原因：尝试执行未实现的 JavaScript 对象表示法 (JSON) 功能。
+* 解决方法：确认表达式存在。
+
+## ORA-40570：JSON conversion failed
+
+* OceanBase 错误码：5476
+* SQLSTATE：42000
+* 错误原因：JSON 转换失败。
+* 解决方法： 检查类型定义或选定的 JSON 值。
+
+## ORA-40571：JSON key name not found.", "JSON key name not found
+
+* OceanBase 错误码：5485
+* SQLSTATE：42000
+* 错误原因：JSON数据中的key不存在。
+
+## ORA-40573：Invalid use of PL/SQL JSON object type
+
+* OceanBase 错误码：5470
+* SQLSTATE：42000
+* 错误原因：尝试在无效上下文中使用 PL/SQL JavaScript 对象表示法 (JSON) 对象类型。
+* 解决方法：仅在 PL/SQL 中使用 PL/SQL JSON 对象类型。
+
+## ORA-40576：Invalid use of bind variable in SQL/JSON path
+
+* OceanBase 错误码：5484
+* SQLSTATE：42000
+* 错误原因：SQL/JSON 路径中绑定变量的使用无效。
+
+## ORA-40587：invalid JSON type
+
+* OceanBase 错误码：5441
+* SQLSTATE：42000
+* 错误原因：无效的 JSON 类型，非法的 JSON 文本。
+
+## ORA-40595：Name input to JSON generation function cannot be null
+
+* OceanBase 错误码：5458
+* SQLSTATE：42000
+* 错误原因：提供给 Javascript 对象表示法 (JSON) 生成函数的名称输入为空。
+* 解决方法：确保输入具有有效值。
+
+## ORA-40597：JSON path expression syntax error ('%.*s')
+
+* OceanBase 错误码：5454
+* SQLSTATE：42000
+* 错误原因：JSON 路径表达式语法错误（“%.*s”）。
+
+## ORA-40629：Patch specification is not valid JSON
+
+* OceanBase 错误码：5450
+* SQLSTATE：42000
+* 错误原因：修补程序规范不是有效的 JSON。
+* 解决方法：确保补丁规范以有效的 JSON 表示。
+
+## ORA-40656：Variable in JSON path expression has no value in PASSING clause
+
+* OceanBase 错误码：5456
+* SQLSTATE：42000
+* 错误原因：JSON 路径表达式中的变量在 PASSING 语句中没有值。
+* 解决方法：将变量添加到外部 PASSING 子句并确保名称匹配。
+
+## ORA-40664：cannot add additional IS jSON check constraint
+
+* OceanBase 错误码：5464
+* SQLSTATE：42000
+* 错误原因：尝试将 IS JSON 检查约束添加到已经具有 IS JSON 检查约束的列。
+* 解决方法：检查 IS JSON 约束的添加。
+
+## ORA-40688：date or time stamp string value does not conform to ISO 8601 format
+
+* OceanBase 错误码：5472
+* SQLSTATE：42000
+* 错误原因：日期或时间戳字符串值不符合 ISO 8601格式。
+* 解决方法：提供符合 ISO 8601 格式的正确日期或时间戳字符串值以进行转换。
+
+## ORA-40750：Patch specification is not valid JSON
+
+* OceanBase 错误码：5452
+* SQLSTATE：42000
+* 错误原因：指定的排序条件包括 LOB 列，例如 CLOB、BLOB 或 JSON。
+* 解决方法：确保排序列数据类型不是大对象，例如 CLOB、BLOB 或 JSON。
+
+## ORA-40779：Truncation is not supported with data type in RETURNING clause
+
+* OceanBase 错误码：5478
+* SQLSTATE：42000
+* 错误原因：RETURNING 语句中的数据类型不支持截断。
+
+## ORA-40783：invalid binary JSON data\nstring
+
+* OceanBase 错误码：5413
+* SQLSTATE：22032
+* 错误原因：提供的二进制 JavaScript 对象表示法 (JSON) 数据无效。
+* 解决方式：提供有效的二进制 JSON 数据。
+
+## ORA-40796：invalid comparison operation involving JSON type value
+
+* OceanBase 错误码：5461
+* SQLSTATE：42000
+* 错误原因：尝试对 JavaScript 对象表示法 (JSON) 类型值进行比较。
+* 解决方法：添加一个 JSON 尾部类型转换函数以将 JSON 类型值与标量值进行比较。使用 JSON_EQUAL 比较两个 JSON 类型值。
+
+## ORA-40799：cannot convert Boolean value to number
+
+* OceanBase 错误码：5475
+* SQLSTATE：42000
+* 错误原因：尝试将由具有 number() 或 numberOnly() 函数的 JavaScript 对象表示法（JSON 路径）表达式选择的布尔值转换为数字。
+* 解决方法：从 JSON 路径表达式中删除 number()/numberOnly() 函数。
+
+## ORA-40833：empty input to JSON operator
+
+* OceanBase 错误码：5463
+* SQLSTATE：42000
+* 错误原因：向需要非空输入的 JSON 运算符提供了空输入（例如空 CLOB）。
+* 解决方法：检查并更正输入。
 
 ORA-42399：cannot perform a DML operation on a read-only view
 ---------------------------------------------------------------------------------
