--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
@@ -542,11 +542,9 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 ## ERROR 4688 (HY000) : standby tenant is read only
 
-
 * OceanBase 错误码：4688
 
 * 错误原因：备集群仅支持读。
-
 
 * 解决方式：如果要修改备集群，需要执行角色切换，切换为主集群。
 
@@ -927,24 +925,17 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 ## ERROR 4747 (HY000) : arbitration service does not exist
 
-
 * OceanBase 错误码：4747
-
 
 * 错误原因：集群尚未配置仲裁服务的地址。
 
-
 * 解决方式：不支持在未配置仲裁服务地址的情况下做仲裁相关操作。可以通过 OCP 或执行 SQL 命令 `alter system add arbitration service‘$svr_ip:$svr_port’;` 为集群添加仲裁服务地址。
-
 
 ## ERROR 4748 (HY000) : arbitration service already exist
 
-
 * OceanBase 错误码：4748
 
-
 * 错误原因：集群已经存在一个有效的仲裁服务地址。
-
 
 * 解决方式：一个集群不支持同时配置多个仲裁服务。
   
@@ -956,3 +947,32 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方式：重新发起 Stop Server 命令直到成功。
 
+## ERROR 4752(HY000) : rootservice start process has failure
+
+* OceanBase 错误码：4752
+* 错误原因：Root Service 启动进程失败。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4753(HY000) :rootservice stop process has failure
+
+* OceanBase 错误码：4753
+* 错误原因：Root Service 停止进程失败。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4754(HY000) :root inspection is not passed
+
+* OceanBase 错误码：4754
+* 错误原因：Root 检查未通过。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4755(HY000) :rootservice backgroud thread may be hung
+
+* OceanBase 错误码：4755
+* 错误原因：Root Service 后台线程可能被挂起。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4756(HY000) :Migration src and dest version is not compatible
+
+* OceanBase 错误码：4756
+* 错误原因：SRC 和 Dest 版本不兼容。
+* 解决方式：无需处理， 迁移复制内核会实现重试。
